test/TestPhases/typechecker/invalid/NoMagicCasting1.blc
module NoMagicCasting1

function noMagicCasting()

    var a: int16 = -128

    var c: int8 = a
end
